Use testthat; tidy DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,28 @@
-Package: verbalisr
 Type: Package
+Package: verbalisr
 Title: Describe Pedigree Relationships In Words
-Version: 0.1.0
-Authors@R: person("Magnus Dehli", "Vigeland", email = "m.d.vigeland@medisin.uio.no", 
-    role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9134-4962"))
-Description: Describe in words the genealogical relationship between two members of 
-    a given pedigree.
+Version: 0.1.0.9000
+Authors@R: 
+    person(given = "Magnus Dehli",
+           family = "Vigeland",
+           role = c("aut", "cre"),
+           email = "m.d.vigeland@medisin.uio.no",
+           comment = c(ORCID = "0000-0002-9134-4962"))
+Description: Describe in words the genealogical relationship between two
+    members of a given pedigree.
 License: GPL-3
 URL: https://github.com/magnusdv/verbalisr
+BugReports: https://github.com/magnusdv/verbalisr/issues
+Depends: 
+    pedtools (>= 0.9.7),
+    R (>= 3.5.0)
+Imports: 
+    ribd
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-GB
 LazyData: true
-Depends: R (>= 3.5.0),
-    pedtools (>= 0.9.7)
-Imports: ribd
-RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
-BugReports: https://github.com/magnusdv/verbalisr/issues
+RoxygenNote: 7.1.1
