--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: verbalisr
 Title: Describe Pedigree Relationships In Words
-Version: 0.1.0.9000
+Version: 0.2.0
 Authors@R: 
     person(given = "Magnus Dehli",
            family = "Vigeland",
@@ -9,7 +9,8 @@ Authors@R:
            email = "m.d.vigeland@medisin.uio.no",
            comment = c(ORCID = "0000-0002-9134-4962"))
 Description: Describe in words the genealogical relationship between two
-    members of a given pedigree.
+    members of a given pedigree. For a demonstration of 'verbalisr', see
+    the online app 'QuickPed' at <https://magnusdv.shinyapps.io/quickped>.
 License: GPL-3
 URL: https://github.com/magnusdv/verbalisr
 BugReports: https://github.com/magnusdv/verbalisr/issues
