--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,16 +3,16 @@ Package: verbalisr
 Title: Describe Pedigree Relationships in Words
 Version: 0.2.1
 Authors@R: 
-    person(given = "Magnus Dehli",
-           family = "Vigeland",
-           role = c("aut", "cre"),
-           email = "m.d.vigeland@medisin.uio.no",
+    person("Magnus Dehli", "Vigeland", , "m.d.vigeland@medisin.uio.no", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9134-4962"))
 Description: Describe in words the genealogical relationship between two
-    members of a given pedigree. For a demonstration of 'verbalisr', see
-    the online app 'QuickPed' at <https://magnusdv.shinyapps.io/quickped>.
+    members of a given pedigree. 'verbalisr' is part of the 'ped suite'
+    collection of packages for pedigree analysis. For a demonstration of
+    'verbalisr', see the online app 'QuickPed' at
+    <https://magnusdv.shinyapps.io/quickped>.
 License: GPL-3
-URL: https://github.com/magnusdv/verbalisr
+URL: https://github.com/magnusdv/verbalisr,
+    https://magnusdv.github.io/pedsuite/
 BugReports: https://github.com/magnusdv/verbalisr/issues
 Depends: 
     pedtools (>= 0.9.7),
