--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: verbalisr
 Title: Describe Pedigree Relationships in Words
-Version: 0.4.0.9000
+Version: 0.5.0
 Authors@R: 
     person("Magnus Dehli", "Vigeland", , "m.d.vigeland@medisin.uio.no", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9134-4962"))
@@ -15,8 +15,8 @@ URL: https://github.com/magnusdv/verbalisr,
     https://magnusdv.github.io/pedsuite/
 BugReports: https://github.com/magnusdv/verbalisr/issues
 Depends: 
-    pedtools (>= 1.1.0),
-    R (>= 4.1)
+    R (>= 4.1),
+    pedtools (>= 1.1.0)
 Imports: 
     ribd (>= 1.3.1)
 Suggests: 
@@ -24,6 +24,6 @@ Suggests:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-GB
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
