--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,12 @@ URL: https://github.com/magnusdv/verbalisr,
     https://magnusdv.github.io/pedsuite/
 BugReports: https://github.com/magnusdv/verbalisr/issues
 Depends: 
-    R (>= 4.1),
-    pedtools (>= 1.1.0)
+    pedtools (>= 2.2.0),
+    R (>= 4.1)
 Imports: 
-    ribd (>= 1.3.1)
+    ribd (>= 1.5.0)
 Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+    testthat
 Encoding: UTF-8
 Language: en-GB
 LazyData: true
