--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,10 @@ Authors@R:
     person("Magnus Dehli", "Vigeland", , "m.d.vigeland@medisin.uio.no", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9134-4962"))
 Description: Describe in words the genealogical relationship between two
-    members of a given pedigree. 'verbalisr' is part of the 'ped suite'
-    collection of packages for pedigree analysis. For a demonstration of
-    'verbalisr', see the online app 'QuickPed' at
+    members of a given pedigree, using the algorithm in Vigeland (2022)
+    <doi:10.1186/s12859-022-04759-y>. 'verbalisr' is part of the
+    'pedsuite' collection of packages for pedigree analysis. For a
+    demonstration of 'verbalisr', see the online app 'QuickPed' at
     <https://magnusdv.shinyapps.io/quickped>.
 License: GPL-3
 URL: https://github.com/magnusdv/verbalisr,
